--- a/vinicius_nascimento_aula1.ipynb
+++ b/vinicius_nascimento_aula1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "vinicius_nascimento_aula1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMcs02KgxYZQwrur+jMFl/9",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNyLro4jh5p/jTS16SUxL7R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +24,26 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Hashiramaz/GC/blob/main/vinicius_nascimento_aula1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xykaA7AxGkcM"
+      },
+      "source": [
+        "Vinicius Nascimento - 0050013232 \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xh2Uj4d2Gj1l"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
